deployment/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileid-app-frontend
  labels:
    app: fileid-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileid-app-frontend
  template:
    metadata:
      labels:
        app: fileid-app-frontend
    spec:
      containers:
        - name: fileid-app-frontend
          image: registry.swisstxt.ch/srfop-proj-inte/fileid-app-frontend:#{version}#
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "150m"
            limits:
              memory: "1Gi"
              cpu: "1"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
