deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileid-app-frontend
  labels:
    app: fileid-app-frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: fileid-app-frontend
